timhelloworld-service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: timhelloworld
  name: timhelloworld
spec:
  ports:
  - name: 8080-80
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: timhelloworld
  type: NodePort
status:
  loadBalancer: {}
